--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Hello world</h1>
+         <a href="./gallery.html">Next</a>
+        <h1>Hello world</h1>       
     </header>    
 </body>
 </html>
